--- a/ansible/templates/.my.cnf.j2
+++ b/ansible/templates/.my.cnf.j2
@@ -1,4 +1,4 @@
 # {{ ansible_managed }}
 [client]
-user=root
-password={{ percona_mysql_root_password }}
+user='root'
+password='{{ percona_mysql_root_password }}'
