--- a/ansible/templates/hopebilling.conf.j2
+++ b/ansible/templates/hopebilling.conf.j2
@@ -1,14 +1,14 @@
 # {{ ansible_managed }}
 server {
     listen 443 ssl;
-    server_name tpm.sadmin.io;
-    error_log /var/log/nginx/tpm.sadmin.io.error.log warn;
+    server_name {{ ansible_nodename }};
+    error_log /var/log/nginx/{{ ansible_nodename }}.error.log warn;
     access_log off;
 
     add_header Strict-Transport-Security "max-age=63072000; includeSubdomains; preload";
 
-    ssl_certificate /etc/nginx/ssl/_.sadmin.io.crt;
-    ssl_certificate_key /etc/nginx/ssl/_.sadmin.io.key;
+    ssl_certificate /etc/nginx/ssl/_.{{ ansible_dns.search }}.crt;
+    ssl_certificate_key /etc/nginx/ssl/_.{{ ansible_dns.search }}.key;
 
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 1d;
@@ -22,7 +22,7 @@ server {
     ssl_ciphers 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS:!DES-CBC3-SHA';
 
     location / {
-        proxy_pass http://192.168.42.111;
+        proxy_pass http://{{ ansible_default_ipv4.address }};
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
