--- a/ansible/templates/my.cnf.j2
+++ b/ansible/templates/my.cnf.j2
@@ -32,3 +32,5 @@ socket=/var/lib/mysql/mysql.sock
 
 log-error=/var/log/mysqld.log
 pid-file=/var/run/mysqld/mysqld.pid
+
+sql-mode=ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION
